Fixed modal overflow, styled a table, fixed some form markup errors.

--- a/www/app/css/stylesheet.css
+++ b/www/app/css/stylesheet.css
@@ -133,6 +133,10 @@ a:hover {
     width: 100%; 
     height: 100%; }
 
+.scrollable {
+    overflow: scroll;
+}
+
 /*------ Sticky footer -------*/
 html {
   position: relative;
